[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google_cloud_utils"
version = "0.3.3"
description = "A wrapper for Google Cloud services handlers"
readme = "README.md"
authors = [
    { name = "DataGem Consulting", email = "contact@datagem.tech" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery==3.41.0",
    "google-cloud-storage==3.11.0",
    "google-cloud-secret-manager==2.29.0",
    "google-cloud-tasks==2.22.0",
    "google-cloud-scheduler==2.20.0",
    "google-cloud-datastore==2.25.0",
    "google-cloud-firestore==2.27.0",
    "google-cloud-resource-manager==1.17.0",
    "google-cloud-aiplatform==1.156.0",
    "google-cloud-pubsub==2.39.0",
    "google-cloud-run==0.16.0",
    "google-cloud-core==2.6.0",
    "google-auth==2.53.0",
    "google-genai==2.8.0",
    "gspread==6.2.1",
    "protobuf==6.33.6",
    "requests==2.34.2",
    "tenacity==9.1.4",
    "pandas==3.0.3",
    "openpyxl==3.1.5",
    "numpy==2.4.6",
    "regex==2026.5.9",
    "genson==1.3.0",
    "python-dotenv==1.2.2",
]

[project.urls]
Homepage = "https://github.com/hayvo/google-cloud-utils"

[tool.setuptools.packages.find]
include = ["google_cloud_utils*"]
